#162 : Cleanup more powermock JDK 17 illegal access permissions + Javadoc