@@ -55,7 +55,6 @@ configurations {
 test.jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
 test.jvmArgs "--add-opens", "java.base/java.util=ALL-UNNAMED"
 test.jvmArgs "--add-opens", "java.base/java.util.stream=ALL-UNNAMED"
-test.jvmArgs "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED"
 test.jvmArgs "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
 test.jvmArgs "--add-opens", "java.base/java.text=ALL-UNNAMED"
 test.jvmArgs "--add-opens", "java.base/java.io=ALL-UNNAMED"
@@ -65,7 +64,6 @@ test.jvmArgs "--add-opens", "java.base/java.time=ALL-UNNAMED"
 test.jvmArgs "--add-opens", "java.base/java.security=ALL-UNNAMED"
 test.jvmArgs "--add-opens", "java.base/java.net=ALL-UNNAMED"
 test.jvmArgs "--add-opens", "java.base/sun.net.www.protocol.https=ALL-UNNAMED"
-test.jvmArgs "--add-exports", "java.base/sun.net.www.protocol.https=ALL-UNNAMED"
 
 jacocoTestCoverageVerification {
   violationRules {
